apps/backend/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aura-3d-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aura-3d-api
  template:
    metadata:
      labels:
        app: aura-3d-api
    spec:
      imagePullSecrets:
        - name: regcred
      tolerations:
        - operator: "Exists"
      containers:
        - name: aura-3d-api
          image: jxnatang7/aura-3d-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
