apps/backend/k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aura-3d-mongo
spec:
  serviceName: "mongo-service"
  replicas: 1
  selector:
    matchLabels:
      app: aura-3d-mongo
  template:
    metadata:
      labels:
        app: aura-3d-mongo
    spec:
      tolerations:
        - operator: "Exists"
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
            - name: mongo-init-scripts
              mountPath: /docker-entrypoint-initdb.d/init-mongo.sh
              subPath: init-mongo.sh
      volumes:
        - name: mongo-init-scripts
          configMap:
            name: mongo-init-scripts
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
