apps/backend/k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: aura-3d-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
